# WPKonverter

./: .gitignore  justfile  main.py  pyproject.toml  pytest-sugar.conf  readme.md
.github/workflows/: checks.yaml  documentation.yaml  publish.yaml  tests.yaml
doc/: pyparsing.md
doc/grammars/: pre-registration.ebnf
doc/releases/: 0.0.1.md  0.0.2.md  0.0.3.md  0.0.4.md
doc/sphinx/: conf.py  development.md  index.md  installation.md  requirements.md  usage.md
test/: conftest.py  test_participant.py  test_pre_registration.py  test_program_point.py  test_speaker.py  test_sponsor.py  test_student.py
test/data/: error.csv  garbage  participant1.txt  participant2.txt  pre-registration.txt  pre-registration2.txt  speaker1.txt  speaker2.txt  speaker3.txt  sponsor1.txt  student1.txt  student2.txt  works.csv
test/prysk/: convert.t  error.t  help.t
test/pytest/: conftest.py  test_participant.py  test_pre_registration.py  test_speaker.py  test_sponsor.py  test_student.py
wpkonverter/: cli.py  converter.py  excel.py  parsing.py
wpkonverter/parsing/: __init__.py  common.py  csv.py  error.py  post_processing.py  pre_registration.py  program_point.py  speaker.py
wpkonverter/parsing/grammar/: common.py  participant.py  pre_registration.py  program_point.py  speaker.py  sponsor.py  student.py  util.py
wpkonverter/scripts/: converter.py
