[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    {name = "René Schwaiger", email = "rene.schwaiger@ift.at"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python",
]
dependencies = [
    "pandas>=3.0.2",
    "pyparsing>=3.3.2",
    "xlsxwriter>=3.2.9",
]
description = """Extract information from WPK mails"""
keywords = [
    "ift",
    "wpk",
]
name = "wpkonverter"
readme = "readme.md"
requires-python = ">=3.12,<4"
version = "0.0.3"

[project.optional-dependencies]
dev = [
    "Flake8-pyproject>=1.2.3",
    "mypy>=2.1.0",
    "myst-parser>=5",
    "pydoclint[flake8]>=0.8.4",
    "prysk[pytest-plugin]>=0.20.0",
    "pylint>=4.0.5",
    "pytest",
    "pytest-sugar>=1.1.1",
    "sphinx>=9.1.0,<10",
    "sphinx-pyproject>=0.3",
    "sphinx_rtd_theme",
]

[project.scripts]
wpkonverter = "wpkonverter.converter:main"

[project.urls]
Source = "https://github.com/ift-tuwien/WPKonverter/"

[tool.black]
line-length = 79
preview = true
unstable = true
enable-unstable-feature = ["string_processing"]

[tool.flake8]

ignore = [
  # Whitespace before colon
  "E203",
  # Module level import not at top of file
  "E402",
  # Line break before binary operator
  "W503",
  # Line break after binary operator
  "W504"
]
per-file-ignores = "__init__.py:F401,conf.py:F821"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
ignore-paths = [ ".venv/.*$" ]

[tool.pytest.ini_options]
addopts = "--doctest-modules --verbose"
testpaths = "test/pytest"
